Tabs refactored and UserProfile split off of User to maintain private User data.
[ADDED]     Support for tabs specifying toolbar tools while the
            LayoutPage manages it and details in it what user/album is
            being focussed on at the moment.
[IMPROVED]  Tabbing system has been refactored to allow expansions such
            as toolbar tools.
[UPDATED]   User is no longer a SecurityObject, effectively making the
            information stored there (eg. userName) publicly accessible.
            All user's private information and his global ACL is
            maintained by the new UserProfile. This allows people to
            find others by their userName without needing to grant
            public access to all the user's profile.
[ADDED]     More documentation on what permissions are required of a
            token in each service call.